--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         "botman/studio-addons": "~1.3",
         "botman/tinker": "~1.0",
         "fideloper/proxy": "^4.0",
+        "james-heinrich/getid3": "^1.9",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "php-ffmpeg/php-ffmpeg": "^0.16.0",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
