--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "fideloper/proxy": "^4.0",
         "james-heinrich/getid3": "^1.9",
         "laravel/framework": "5.7.*",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "php-ffmpeg/php-ffmpeg": "^0.16.0",
         "predis/predis": "^1.1",
