--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.35",
         "php-ffmpeg/php-ffmpeg": "^0.16.0",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "dev-develop"
