--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.7"
   },
   "dependencies": {
-    "botman-tinker": "^0.0.1"
+    "botman-tinker": "^0.0.1",
+    "ffmpeg": "0.0.4"
   }
 }
